parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM COLON gotomain global program2 finglobal program3 llenarmain MAIN main1 mainc finmain
Rule 2     program -> PROGRAM COLON gotomain global program2 finglobal llenarmain MAIN main1 mainc finmain
Rule 3     program -> PROGRAM COLON gotomain llenarmain MAIN main1 mainc finmain
Rule 4     gotomain -> <empty>
Rule 5     program2 -> crear program2
Rule 6     program2 -> crear
Rule 7     program3 -> function program3
Rule 8     program3 -> function
Rule 9     llenarmain -> <empty>
Rule 10    crear -> var
Rule 11    crear -> vector
Rule 12    global -> <empty>
Rule 13    finglobal -> <empty>
Rule 14    main1 -> <empty>
Rule 15    finmain -> <empty>
Rule 16    var -> VAR tipo ID SEMICOLON
Rule 17    tipo -> INT
Rule 18    tipo -> FLOAT
Rule 19    tipo -> STRING
Rule 20    tipo -> BOOL
Rule 21    vector -> VECTOR initvector INT ID LBRACE CTE_I RBRACE SEMICOLON
Rule 22    vector -> VECTOR initvector FLOAT ID LBRACE CTE_I RBRACE SEMICOLON
Rule 23    vector -> VECTOR initvector STRING ID LBRACE CTE_I RBRACE SEMICOLON
Rule 24    vector -> VECTOR initvector BOOL ID LBRACE CTE_I RBRACE SEMICOLON
Rule 25    initvector -> <empty>
Rule 26    function -> FUNCTION functype ID addInTable LPAREN funci RPAREN LKEY localvar bloq return1 RKEY
Rule 27    function -> FUNCTION pushvoid ID addInTable LPAREN funci RPAREN LKEY localvar bloq RKEY
Rule 28    function -> FUNCTION pushvoid ID addInTable LPAREN funci RPAREN LKEY bloq RKEY
Rule 29    function -> FUNCTION functype ID addInTable LPAREN RPAREN LKEY localvar RKEY
Rule 30    function -> FUNCTION pushvoid ID addInTable LPAREN RPAREN LKEY localvar RKEY
Rule 31    function -> FUNCTION functype ID addInTable LPAREN RPAREN LKEY localvar bloq return1 RKEY
Rule 32    function -> FUNCTION pushvoid ID addInTable LPAREN RPAREN LKEY localvar bloq RKEY
Rule 33    function -> FUNCTION pushvoid ID addInTable LPAREN RPAREN LKEY bloq RKEY
Rule 34    function -> FUNCTION functype ID addInTable LPAREN RPAREN LKEY bloq return1 RKEY
Rule 35    function -> FUNCTION functype ID addInTable LPAREN RPAREN LKEY RKEY
Rule 36    functype -> INT
Rule 37    functype -> FLOAT
Rule 38    functype -> STRING
Rule 39    functype -> BOOL
Rule 40    pushvoid -> VOID
Rule 41    addInTable -> <empty>
Rule 42    funci -> INT ID
Rule 43    funci -> INT ID COMA funci
Rule 44    funci -> FLOAT ID
Rule 45    funci -> FLOAT ID COMA funci
Rule 46    funci -> STRING ID
Rule 47    funci -> STRING ID COMA funci
Rule 48    funci -> BOOL ID
Rule 49    funci -> BOOL ID COMA funci
Rule 50    funci -> empty
Rule 51    localvar -> var
Rule 52    localvar -> vector
Rule 53    localvar -> var localvar
Rule 54    localvar -> vector localvar
Rule 55    return1 -> RETURN expres resreturn SEMICOLON
Rule 56    return1 -> empty
Rule 57    resreturn -> <empty>
Rule 58    mainc -> LKEY RKEY
Rule 59    mainc -> LKEY bloq RKEY
Rule 60    mainc -> LKEY mainc2 bloq RKEY
Rule 61    mainc -> LKEY mainc2 RKEY
Rule 62    mainc2 -> var
Rule 63    mainc2 -> var mainc2
Rule 64    mainc2 -> vector
Rule 65    mainc2 -> vector mainc2
Rule 66    bloq -> estat
Rule 67    bloq -> estat bloq
Rule 68    estat -> asign
Rule 69    estat -> cond
Rule 70    estat -> escrit
Rule 71    estat -> ciclo
Rule 72    estat -> leer
Rule 73    estat -> fcallvoid
Rule 74    asign -> ID pushid EQUAL pushop expres resolverasignacion SEMICOLON
Rule 75    asign -> ID pushid LBRACE exr RBRACE EQUAL pushop expres SEMICOLON
Rule 76    cond -> IF LPAREN expres RPAREN LKEY resif bloq RKEY finif
Rule 77    cond -> IF LPAREN expres RPAREN LKEY resif bloq RKEY ELSE LKEY reselse bloq RKEY finif
Rule 78    escrit -> PRINT pushop LPAREN imprimirl escriti RPAREN SEMICOLON
Rule 79    escriti -> expres escrit1
Rule 80    escriti -> expres escrit2 COMA escriti
Rule 81    imprimirl -> <empty>
Rule 82    escrit1 -> <empty>
Rule 83    escrit2 -> <empty>
Rule 84    ciclo -> WHILE while1 LPAREN expres RPAREN while2 LKEY bloq RKEY while3
Rule 85    leer -> READ pushop LPAREN ID pushid readid RPAREN SEMICOLON
Rule 86    readid -> <empty>
Rule 87    expres -> exr
Rule 88    expres -> exr log expres reslog
Rule 89    exr -> ex
Rule 90    exr -> ex rel exr resrel
Rule 91    reslog -> <empty>
Rule 92    ex -> term resterm
Rule 93    ex -> term resterm PLUS pushop ex
Rule 94    ex -> term resterm MINUS pushop ex
Rule 95    term -> fact resfact
Rule 96    term -> fact resfact TIMES pushop term
Rule 97    term -> fact resfact DIVIDE pushop term
Rule 98    fact -> LPAREN pushop expres RPAREN popop
Rule 99    fact -> var_cte
Rule 100   fact -> PLUS var_cte
Rule 101   fact -> MINUS var_cte
Rule 102   rel -> LOWERTHAN
Rule 103   rel -> MORETHAN
Rule 104   rel -> LOWEREQ
Rule 105   rel -> MOREEQ
Rule 106   rel -> SAME
Rule 107   rel -> DIFFERENT
Rule 108   log -> OR
Rule 109   log -> AND
Rule 110   var_cte -> ID pushid
Rule 111   var_cte -> CTE_I pushcte
Rule 112   var_cte -> CTE_F pushcte
Rule 113   var_cte -> CTE_S pushcte
Rule 114   var_cte -> TRUE pushcte
Rule 115   var_cte -> FALSE pushcte
Rule 116   var_cte -> fcall
Rule 117   var_cte -> vcall
Rule 118   var_cte -> asigvector
Rule 119   asigvector -> ID pushid LBRACE ex RBRACE
Rule 120   fcall -> ID existfunc LPAREN startera fcall1 RPAREN generateGoSub
Rule 121   fcall -> ID existfunc LPAREN startera RPAREN generateGoSub
Rule 122   fcallvoid -> ID existfunc LPAREN startera fcall1 RPAREN SEMICOLON
Rule 123   fcallvoid -> ID existfunc LPAREN startera RPAREN SEMICOLON
Rule 124   existfunc -> <empty>
Rule 125   startera -> <empty>
Rule 126   fcall1 -> expres generateparam
Rule 127   fcall1 -> expres generateparam COMA fcall1
Rule 128   generateparam -> <empty>
Rule 129   generateGoSub -> <empty>
Rule 130   vcall -> ID LBRACE expres RBRACE
Rule 131   empty -> <empty>
Rule 132   pushcte -> <empty>
Rule 133   pushid -> <empty>
Rule 134   pushop -> <empty>
Rule 135   popop -> <empty>
Rule 136   resolverasignacion -> <empty>
Rule 137   resfact -> <empty>
Rule 138   resterm -> <empty>
Rule 139   resrel -> <empty>
Rule 140   resif -> <empty>
Rule 141   reselse -> <empty>
Rule 142   finif -> <empty>
Rule 143   while1 -> <empty>
Rule 144   while2 -> <empty>
Rule 145   while3 -> <empty>

Terminals, with rules where they appear

AND                  : 109
BOOL                 : 20 24 39 48 49
COLON                : 1 2 3
COMA                 : 43 45 47 49 80 127
CTE_F                : 112
CTE_I                : 21 22 23 24 111
CTE_S                : 113
DIFFERENT            : 107
DIVIDE               : 97
ELSE                 : 77
EQUAL                : 74 75
FALSE                : 115
FLOAT                : 18 22 37 44 45
FUNCTION             : 26 27 28 29 30 31 32 33 34 35
ID                   : 16 21 22 23 24 26 27 28 29 30 31 32 33 34 35 42 43 44 45 46 47 48 49 74 75 85 110 119 120 121 122 123 130
IF                   : 76 77
INT                  : 17 21 36 42 43
LBRACE               : 21 22 23 24 75 119 130
LKEY                 : 26 27 28 29 30 31 32 33 34 35 58 59 60 61 76 77 77 84
LOWEREQ              : 104
LOWERTHAN            : 102
LPAREN               : 26 27 28 29 30 31 32 33 34 35 76 77 78 84 85 98 120 121 122 123
MAIN                 : 1 2 3
MINUS                : 94 101
MOREEQ               : 105
MORETHAN             : 103
OR                   : 108
PLUS                 : 93 100
PRINT                : 78
PROGRAM              : 1 2 3
RBRACE               : 21 22 23 24 75 119 130
READ                 : 85
RETURN               : 55
RKEY                 : 26 27 28 29 30 31 32 33 34 35 58 59 60 61 76 77 77 84
RPAREN               : 26 27 28 29 30 31 32 33 34 35 76 77 78 84 85 98 120 121 122 123
SAME                 : 106
SEMICOLON            : 16 21 22 23 24 55 74 75 78 85 122 123
STRING               : 19 23 38 46 47
TIMES                : 96
TRUE                 : 114
VAR                  : 16
VECTOR               : 21 22 23 24
VOID                 : 40
WHILE                : 84
error                : 

Nonterminals, with rules where they appear

addInTable           : 26 27 28 29 30 31 32 33 34 35
asign                : 68
asigvector           : 118
bloq                 : 26 27 28 31 32 33 34 59 60 67 76 77 77 84
ciclo                : 71
cond                 : 69
crear                : 5 6
empty                : 50 56
escrit               : 70
escrit1              : 79
escrit2              : 80
escriti              : 78 80
estat                : 66 67
ex                   : 89 90 93 94 119
existfunc            : 120 121 122 123
expres               : 55 74 75 76 77 79 80 84 88 98 126 127 130
exr                  : 75 87 88 90
fact                 : 95 96 97
fcall                : 116
fcall1               : 120 122 127
fcallvoid            : 73
finglobal            : 1 2
finif                : 76 77
finmain              : 1 2 3
funci                : 26 27 28 43 45 47 49
function             : 7 8
functype             : 26 29 31 34 35
generateGoSub        : 120 121
generateparam        : 126 127
global               : 1 2
gotomain             : 1 2 3
imprimirl            : 78
initvector           : 21 22 23 24
leer                 : 72
llenarmain           : 1 2 3
localvar             : 26 27 29 30 31 32 53 54
log                  : 88
main1                : 1 2 3
mainc                : 1 2 3
mainc2               : 60 61 63 65
popop                : 98
program              : 0
program2             : 1 2 5
program3             : 1 7
pushcte              : 111 112 113 114 115
pushid               : 74 75 85 110 119
pushop               : 74 75 78 85 93 94 96 97 98
pushvoid             : 27 28 30 32 33
readid               : 85
rel                  : 90
reselse              : 77
resfact              : 95 96 97
resif                : 76 77
reslog               : 88
resolverasignacion   : 74
resrel               : 90
resreturn            : 55
resterm              : 92 93 94
return1              : 26 31 34
startera             : 120 121 122 123
term                 : 92 93 94 96 97
tipo                 : 16
var                  : 10 51 53 62 63
var_cte              : 99 100 101
vcall                : 117
vector               : 11 52 54 64 65
while1               : 84
while2               : 84
while3               : 84

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM COLON gotomain global program2 finglobal program3 llenarmain MAIN main1 mainc finmain
    (2) program -> . PROGRAM COLON gotomain global program2 finglobal llenarmain MAIN main1 mainc finmain
    (3) program -> . PROGRAM COLON gotomain llenarmain MAIN main1 mainc finmain

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . COLON gotomain global program2 finglobal program3 llenarmain MAIN main1 mainc finmain
    (2) program -> PROGRAM . COLON gotomain global program2 finglobal llenarmain MAIN main1 mainc finmain
    (3) program -> PROGRAM . COLON gotomain llenarmain MAIN main1 mainc finmain

    COLON           shift and go to state 3


state 3

    (1) program -> PROGRAM COLON . gotomain global program2 finglobal program3 llenarmain MAIN main1 mainc finmain
    (2) program -> PROGRAM COLON . gotomain global program2 finglobal llenarmain MAIN main1 mainc finmain
    (3) program -> PROGRAM COLON . gotomain llenarmain MAIN main1 mainc finmain
    (4) gotomain -> .

    VAR             reduce using rule 4 (gotomain -> .)
    VECTOR          reduce using rule 4 (gotomain -> .)
    MAIN            reduce using rule 4 (gotomain -> .)

    gotomain                       shift and go to state 4

state 4

    (1) program -> PROGRAM COLON gotomain . global program2 finglobal program3 llenarmain MAIN main1 mainc finmain
    (2) program -> PROGRAM COLON gotomain . global program2 finglobal llenarmain MAIN main1 mainc finmain
    (3) program -> PROGRAM COLON gotomain . llenarmain MAIN main1 mainc finmain
    (12) global -> .
    (9) llenarmain -> .

    VAR             reduce using rule 12 (global -> .)
    VECTOR          reduce using rule 12 (global -> .)
    MAIN            reduce using rule 9 (llenarmain -> .)

    global                         shift and go to state 5
    llenarmain                     shift and go to state 6

state 5

    (1) program -> PROGRAM COLON gotomain global . program2 finglobal program3 llenarmain MAIN main1 mainc finmain
    (2) program -> PROGRAM COLON gotomain global . program2 finglobal llenarmain MAIN main1 mainc finmain
    (5) program2 -> . crear program2
    (6) program2 -> . crear
    (10) crear -> . var
    (11) crear -> . vector
    (16) var -> . VAR tipo ID SEMICOLON
    (21) vector -> . VECTOR initvector INT ID LBRACE CTE_I RBRACE SEMICOLON
    (22) vector -> . VECTOR initvector FLOAT ID LBRACE CTE_I RBRACE SEMICOLON
    (23) vector -> . VECTOR initvector STRING ID LBRACE CTE_I RBRACE SEMICOLON
    (24) vector -> . VECTOR initvector BOOL ID LBRACE CTE_I RBRACE SEMICOLON

    VAR             shift and go to state 11
    VECTOR          shift and go to state 12

    program2                       shift and go to state 7
    crear                          shift and go to state 8
    var                            shift and go to state 9
    vector                         shift and go to state 10

state 6

    (3) program -> PROGRAM COLON gotomain llenarmain . MAIN main1 mainc finmain

    MAIN            shift and go to state 13


state 7

    (1) program -> PROGRAM COLON gotomain global program2 . finglobal program3 llenarmain MAIN main1 mainc finmain
    (2) program -> PROGRAM COLON gotomain global program2 . finglobal llenarmain MAIN main1 mainc finmain
    (13) finglobal -> .

    FUNCTION        reduce using rule 13 (finglobal -> .)
    MAIN            reduce using rule 13 (finglobal -> .)

    finglobal                      shift and go to state 14

state 8

    (5) program2 -> crear . program2
    (6) program2 -> crear .
    (5) program2 -> . crear program2
    (6) program2 -> . crear
    (10) crear -> . var
    (11) crear -> . vector
    (16) var -> . VAR tipo ID SEMICOLON
    (21) vector -> . VECTOR initvector INT ID LBRACE CTE_I RBRACE SEMICOLON
    (22) vector -> . VECTOR initvector FLOAT ID LBRACE CTE_I RBRACE SEMICOLON
    (23) vector -> . VECTOR initvector STRING ID LBRACE CTE_I RBRACE SEMICOLON
    (24) vector -> . VECTOR initvector BOOL ID LBRACE CTE_I RBRACE SEMICOLON

    FUNCTION        reduce using rule 6 (program2 -> crear .)
    MAIN            reduce using rule 6 (program2 -> crear .)
    VAR             shift and go to state 11
    VECTOR          shift and go to state 12

    crear                          shift and go to state 8
    program2                       shift and go to state 15
    var                            shift and go to state 9
    vector                         shift and go to state 10

state 9

    (10) crear -> var .

    VAR             reduce using rule 10 (crear -> var .)
    VECTOR          reduce using rule 10 (crear -> var .)
    FUNCTION        reduce using rule 10 (crear -> var .)
    MAIN            reduce using rule 10 (crear -> var .)


state 10

    (11) crear -> vector .

    VAR             reduce using rule 11 (crear -> vector .)
    VECTOR          reduce using rule 11 (crear -> vector .)
    FUNCTION        reduce using rule 11 (crear -> vector .)
    MAIN            reduce using rule 11 (crear -> vector .)


state 11

    (16) var -> VAR . tipo ID SEMICOLON
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (19) tipo -> . STRING
    (20) tipo -> . BOOL

    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    tipo                           shift and go to state 16

state 12

    (21) vector -> VECTOR . initvector INT ID LBRACE CTE_I RBRACE SEMICOLON
    (22) vector -> VECTOR . initvector FLOAT ID LBRACE CTE_I RBRACE SEMICOLON
    (23) vector -> VECTOR . initvector STRING ID LBRACE CTE_I RBRACE SEMICOLON
    (24) vector -> VECTOR . initvector BOOL ID LBRACE CTE_I RBRACE SEMICOLON
    (25) initvector -> .

    INT             reduce using rule 25 (initvector -> .)
    FLOAT           reduce using rule 25 (initvector -> .)
    STRING          reduce using rule 25 (initvector -> .)
    BOOL            reduce using rule 25 (initvector -> .)

    initvector                     shift and go to state 21

state 13

    (3) program -> PROGRAM COLON gotomain llenarmain MAIN . main1 mainc finmain
    (14) main1 -> .

    LKEY            reduce using rule 14 (main1 -> .)

    main1                          shift and go to state 22

state 14

    (1) program -> PROGRAM COLON gotomain global program2 finglobal . program3 llenarmain MAIN main1 mainc finmain
    (2) program -> PROGRAM COLON gotomain global program2 finglobal . llenarmain MAIN main1 mainc finmain
    (7) program3 -> . function program3
    (8) program3 -> . function
    (9) llenarmain -> .
    (26) function -> . FUNCTION functype ID addInTable LPAREN funci RPAREN LKEY localvar bloq return1 RKEY
    (27) function -> . FUNCTION pushvoid ID addInTable LPAREN funci RPAREN LKEY localvar bloq RKEY
    (28) function -> . FUNCTION pushvoid ID addInTable LPAREN funci RPAREN LKEY bloq RKEY
    (29) function -> . FUNCTION functype ID addInTable LPAREN RPAREN LKEY localvar RKEY
    (30) function -> . FUNCTION pushvoid ID addInTable LPAREN RPAREN LKEY localvar RKEY
    (31) function -> . FUNCTION functype ID addInTable LPAREN RPAREN LKEY localvar bloq return1 RKEY
    (32) function -> . FUNCTION pushvoid ID addInTable LPAREN RPAREN LKEY localvar bloq RKEY
    (33) function -> . FUNCTION pushvoid ID addInTable LPAREN RPAREN LKEY bloq RKEY
    (34) function -> . FUNCTION functype ID addInTable LPAREN RPAREN LKEY bloq return1 RKEY
    (35) function -> . FUNCTION functype ID addInTable LPAREN RPAREN LKEY RKEY

    MAIN            reduce using rule 9 (llenarmain -> .)
    FUNCTION        shift and go to state 26

    program3                       shift and go to state 23
    llenarmain                     shift and go to state 24
    function                       shift and go to state 25

state 15

    (5) program2 -> crear program2 .

    FUNCTION        reduce using rule 5 (program2 -> crear program2 .)
    MAIN            reduce using rule 5 (program2 -> crear program2 .)


state 16

    (16) var -> VAR tipo . ID SEMICOLON

    ID              shift and go to state 27


state 17

    (17) tipo -> INT .

    ID              reduce using rule 17 (tipo -> INT .)


state 18

    (18) tipo -> FLOAT .

    ID              reduce using rule 18 (tipo -> FLOAT .)


state 19

    (19) tipo -> STRING .

    ID              reduce using rule 19 (tipo -> STRING .)


state 20

    (20) tipo -> BOOL .

    ID              reduce using rule 20 (tipo -> BOOL .)


state 21

    (21) vector -> VECTOR initvector . INT ID LBRACE CTE_I RBRACE SEMICOLON
    (22) vector -> VECTOR initvector . FLOAT ID LBRACE CTE_I RBRACE SEMICOLON
    (23) vector -> VECTOR initvector . STRING ID LBRACE CTE_I RBRACE SEMICOLON
    (24) vector -> VECTOR initvector . BOOL ID LBRACE CTE_I RBRACE SEMICOLON

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    BOOL            shift and go to state 31


state 22

    (3) program -> PROGRAM COLON gotomain llenarmain MAIN main1 . mainc finmain
    (58) mainc -> . LKEY RKEY
    (59) mainc -> . LKEY bloq RKEY
    (60) mainc -> . LKEY mainc2 bloq RKEY
    (61) mainc -> . LKEY mainc2 RKEY

    LKEY            shift and go to state 33

    mainc                          shift and go to state 32

state 23

    (1) program -> PROGRAM COLON gotomain global program2 finglobal program3 . llenarmain MAIN main1 mainc finmain
    (9) llenarmain -> .

    MAIN            reduce using rule 9 (llenarmain -> .)

    llenarmain                     shift and go to state 34

state 24

    (2) program -> PROGRAM COLON gotomain global program2 finglobal llenarmain . MAIN main1 mainc finmain

    MAIN            shift and go to state 35


state 25

    (7) program3 -> function . program3
    (8) program3 -> function .
    (7) program3 -> . function program3
    (8) program3 -> . function
    (26) function -> . FUNCTION functype ID addInTable LPAREN funci RPAREN LKEY localvar bloq return1 RKEY
    (27) function -> . FUNCTION pushvoid ID addInTable LPAREN funci RPAREN LKEY localvar bloq RKEY
    (28) function -> . FUNCTION pushvoid ID addInTable LPAREN funci RPAREN LKEY bloq RKEY
    (29) function -> . FUNCTION functype ID addInTable LPAREN RPAREN LKEY localvar RKEY
    (30) function -> . FUNCTION pushvoid ID addInTable LPAREN RPAREN LKEY localvar RKEY
    (31) function -> . FUNCTION functype ID addInTable LPAREN RPAREN LKEY localvar bloq return1 RKEY
    (32) function -> . FUNCTION pushvoid ID addInTable LPAREN RPAREN LKEY localvar bloq RKEY
    (33) function -> . FUNCTION pushvoid ID addInTable LPAREN RPAREN LKEY bloq RKEY
    (34) function -> . FUNCTION functype ID addInTable LPAREN RPAREN LKEY bloq return1 RKEY
    (35) function -> . FUNCTION functype ID addInTable LPAREN RPAREN LKEY RKEY

    MAIN            reduce using rule 8 (program3 -> function .)
    FUNCTION        shift and go to state 26

    function                       shift and go to state 25
    program3                       shift and go to state 36

state 26

    (26) function -> FUNCTION . functype ID addInTable LPAREN funci RPAREN LKEY localvar bloq return1 RKEY
    (27) function -> FUNCTION . pushvoid ID addInTable LPAREN funci RPAREN LKEY localvar bloq RKEY
    (28) function -> FUNCTION . pushvoid ID addInTable LPAREN funci RPAREN LKEY bloq RKEY
    (29) function -> FUNCTION . functype ID addInTable LPAREN RPAREN LKEY localvar RKEY
    (30) function -> FUNCTION . pushvoid ID addInTable LPAREN RPAREN LKEY localvar RKEY
    (31) function -> FUNCTION . functype ID addInTable LPAREN RPAREN LKEY localvar bloq return1 RKEY
    (32) function -> FUNCTION . pushvoid ID addInTable LPAREN RPAREN LKEY localvar bloq RKEY
    (33) function -> FUNCTION . pushvoid ID addInTable LPAREN RPAREN LKEY bloq RKEY
    (34) function -> FUNCTION . functype ID addInTable LPAREN RPAREN LKEY bloq return1 RKEY
    (35) function -> FUNCTION . functype ID addInTable LPAREN RPAREN LKEY RKEY
    (36) functype -> . INT
    (37) functype -> . FLOAT
    (38) functype -> . STRING
    (39) functype -> . BOOL
    (40) pushvoid -> . VOID

    INT             shift and go to state 39
    FLOAT           shift and go to state 40
    STRING          shift and go to state 41
    BOOL            shift and go to state 42
    VOID            shift and go to state 43

    functype                       shift and go to state 37
    pushvoid                       shift and go to state 38

state 27

    (16) var -> VAR tipo ID . SEMICOLON

    SEMICOLON       shift and go to state 44


state 28

    (21) vector -> VECTOR initvector INT . ID LBRACE CTE_I RBRACE SEMICOLON

    ID              shift and go to state 45


state 29

    (22) vector -> VECTOR initvector FLOAT . ID LBRACE CTE_I RBRACE SEMICOLON

    ID              shift and go to state 46


state 30

    (23) vector -> VECTOR initvector STRING . ID LBRACE CTE_I RBRACE SEMICOLON

    ID              shift and go to state 47


state 31

    (24) vector -> VECTOR initvector BOOL . ID LBRACE CTE_I RBRACE SEMICOLON

    ID              shift and go to state 48


state 32

    (3) program -> PROGRAM COLON gotomain llenarmain MAIN main1 mainc . finmain
    (15) finmain -> .

    $end            reduce using rule 15 (finmain -> .)

    finmain                        shift and go to state 49

state 33

    (58) mainc -> LKEY . RKEY
    (59) mainc -> LKEY . bloq RKEY
    (60) mainc -> LKEY . mainc2 bloq RKEY
    (61) mainc -> LKEY . mainc2 RKEY
    (66) bloq -> . estat
    (67) bloq -> . estat bloq
    (62) mainc2 -> . var
    (63) mainc2 -> . var mainc2
    (64) mainc2 -> . vector
    (65) mainc2 -> . vector mainc2
    (68) estat -> . asign
    (69) estat -> . cond
    (70) estat -> . escrit
    (71) estat -> . ciclo
    (72) estat -> . leer
    (73) estat -> . fcallvoid
    (16) var -> . VAR tipo ID SEMICOLON
    (21) vector -> . VECTOR initvector INT ID LBRACE CTE_I RBRACE SEMICOLON
    (22) vector -> . VECTOR initvector FLOAT ID LBRACE CTE_I RBRACE SEMICOLON
    (23) vector -> . VECTOR initvector STRING ID LBRACE CTE_I RBRACE SEMICOLON
    (24) vector -> . VECTOR initvector BOOL ID LBRACE CTE_I RBRACE SEMICOLON
    (74) asign -> . ID pushid EQUAL pushop expres resolverasignacion SEMICOLON
    (75) asign -> . ID pushid LBRACE exr RBRACE EQUAL pushop expres SEMICOLON
    (76) cond -> . IF LPAREN expres RPAREN LKEY resif bloq RKEY finif
    (77) cond -> . IF LPAREN expres RPAREN LKEY resif bloq RKEY ELSE LKEY reselse bloq RKEY finif
    (78) escrit -> . PRINT pushop LPAREN imprimirl escriti RPAREN SEMICOLON
    (84) ciclo -> . WHILE while1 LPAREN expres RPAREN while2 LKEY bloq RKEY while3
    (85) leer -> . READ pushop LPAREN ID pushid readid RPAREN SEMICOLON
    (122) fcallvoid -> . ID existfunc LPAREN startera fcall1 RPAREN SEMICOLON
    (123) fcallvoid -> . ID existfunc LPAREN startera RPAREN SEMICOLON

    RKEY            shift and go to state 50
    VAR             shift and go to state 11
    VECTOR          shift and go to state 12
    ID              shift and go to state 62
    IF              shift and go to state 63
    PRINT           shift and go to state 64
    WHILE           shift and go to state 65
    READ            shift and go to state 66

    bloq                           shift and go to state 51
    mainc2                         shift and go to state 52
    estat                          shift and go to state 53
    var                            shift and go to state 54
    vector                         shift and go to state 55
    asign                          shift and go to state 56
    cond                           shift and go to state 57
    escrit                         shift and go to state 58
    ciclo                          shift and go to state 59
    leer                           shift and go to state 60
    fcallvoid                      shift and go to state 61

state 34

    (1) program -> PROGRAM COLON gotomain global program2 finglobal program3 llenarmain . MAIN main1 mainc finmain

    MAIN            shift and go to state 67


state 35

    (2) program -> PROGRAM COLON gotomain global program2 finglobal llenarmain MAIN . main1 mainc finmain
    (14) main1 -> .

    LKEY            reduce using rule 14 (main1 -> .)

    main1                          shift and go to state 68

state 36

    (7) program3 -> function program3 .

    MAIN            reduce using rule 7 (program3 -> function program3 .)


state 37

    (26) function -> FUNCTION functype . ID addInTable LPAREN funci RPAREN LKEY localvar bloq return1 RKEY
    (29) function -> FUNCTION functype . ID addInTable LPAREN RPAREN LKEY localvar RKEY
    (31) function -> FUNCTION functype . ID addInTable LPAREN RPAREN LKEY localvar bloq return1 RKEY
    (34) function -> FUNCTION functype . ID addInTable LPAREN RPAREN LKEY bloq return1 RKEY
    (35) function -> FUNCTION functype . ID addInTable LPAREN RPAREN LKEY RKEY

    ID              shift and go to state 69


state 38

    (27) function -> FUNCTION pushvoid . ID addInTable LPAREN funci RPAREN LKEY localvar bloq RKEY
    (28) function -> FUNCTION pushvoid . ID addInTable LPAREN funci RPAREN LKEY bloq RKEY
    (30) function -> FUNCTION pushvoid . ID addInTable LPAREN RPAREN LKEY localvar RKEY
    (32) function -> FUNCTION pushvoid . ID addInTable LPAREN RPAREN LKEY localvar bloq RKEY
    (33) function -> FUNCTION pushvoid . ID addInTable LPAREN RPAREN LKEY bloq RKEY

    ID              shift and go to state 70


state 39

    (36) functype -> INT .

    ID              reduce using rule 36 (functype -> INT .)


state 40

    (37) functype -> FLOAT .

    ID              reduce using rule 37 (functype -> FLOAT .)


state 41

    (38) functype -> STRING .

    ID              reduce using rule 38 (functype -> STRING .)


state 42

    (39) functype -> BOOL .

    ID              reduce using rule 39 (functype -> BOOL .)


state 43

    (40) pushvoid -> VOID .

    ID              reduce using rule 40 (pushvoid -> VOID .)


state 44

    (16) var -> VAR tipo ID SEMICOLON .

    VAR             reduce using rule 16 (var -> VAR tipo ID SEMICOLON .)
    VECTOR          reduce using rule 16 (var -> VAR tipo ID SEMICOLON .)
    FUNCTION        reduce using rule 16 (var -> VAR tipo ID SEMICOLON .)
    MAIN            reduce using rule 16 (var -> VAR tipo ID SEMICOLON .)
    RKEY            reduce using rule 16 (var -> VAR tipo ID SEMICOLON .)
    ID              reduce using rule 16 (var -> VAR tipo ID SEMICOLON .)
    IF              reduce using rule 16 (var -> VAR tipo ID SEMICOLON .)
    PRINT           reduce using rule 16 (var -> VAR tipo ID SEMICOLON .)
    WHILE           reduce using rule 16 (var -> VAR tipo ID SEMICOLON .)
    READ            reduce using rule 16 (var -> VAR tipo ID SEMICOLON .)


state 45

    (21) vector -> VECTOR initvector INT ID . LBRACE CTE_I RBRACE SEMICOLON

    LBRACE          shift and go to state 71


state 46

    (22) vector -> VECTOR initvector FLOAT ID . LBRACE CTE_I RBRACE SEMICOLON

    LBRACE          shift and go to state 72


state 47

    (23) vector -> VECTOR initvector STRING ID . LBRACE CTE_I RBRACE SEMICOLON

    LBRACE          shift and go to state 73


state 48

    (24) vector -> VECTOR initvector BOOL ID . LBRACE CTE_I RBRACE SEMICOLON

    LBRACE          shift and go to state 74


state 49

    (3) program -> PROGRAM COLON gotomain llenarmain MAIN main1 mainc finmain .

    $end            reduce using rule 3 (program -> PROGRAM COLON gotomain llenarmain MAIN main1 mainc finmain .)


state 50

    (58) mainc -> LKEY RKEY .

    $end            reduce using rule 58 (mainc -> LKEY RKEY .)


state 51

    (59) mainc -> LKEY bloq . RKEY

    RKEY            shift and go to state 75


state 52

    (60) mainc -> LKEY mainc2 . bloq RKEY
    (61) mainc -> LKEY mainc2 . RKEY
    (66) bloq -> . estat
    (67) bloq -> . estat bloq
    (68) estat -> . asign
    (69) estat -> . cond
    (70) estat -> . escrit
    (71) estat -> . ciclo
    (72) estat -> . leer
    (73) estat -> . fcallvoid
    (74) asign -> . ID pushid EQUAL pushop expres resolverasignacion SEMICOLON
    (75) asign -> . ID pushid LBRACE exr RBRACE EQUAL pushop expres SEMICOLON
    (76) cond -> . IF LPAREN expres RPAREN LKEY resif bloq RKEY finif
    (77) cond -> . IF LPAREN expres RPAREN LKEY resif bloq RKEY ELSE LKEY reselse bloq RKEY finif
    (78) escrit -> . PRINT pushop LPAREN imprimirl escriti RPAREN SEMICOLON
    (84) ciclo -> . WHILE while1 LPAREN expres RPAREN while2 LKEY bloq RKEY while3
    (85) leer -> . READ pushop LPAREN ID pushid readid RPAREN SEMICOLON
    (122) fcallvoid -> . ID existfunc LPAREN startera fcall1 RPAREN SEMICOLON
    (123) fcallvoid -> . ID existfunc LPAREN startera RPAREN SEMICOLON

    RKEY            shift and go to state 77
    ID              shift and go to state 62
    IF              shift and go to state 63
    PRINT           shift and go to state 64
    WHILE           shift and go to state 65
    READ            shift and go to state 66

    bloq                           shift and go to state 76
    estat                          shift and go to state 53
    asign                          shift and go to state 56
    cond                           shift and go to state 57
    escrit                         shift and go to state 58
    ciclo                          shift and go to state 59
    leer                           shift and go to state 60
    fcallvoid                      shift and go to state 61

state 53
